# segmentationtools

./: .buildinfo  .gitignore  DEVELOPMENT.md  README.md  docs_requirements.txt  edgetedection.ipynb  faceslicing.ipynb  genindex.html  hedDetection.ipynb  index.html  objects.inv  py-modindex.html  requirements.txt  sam.ipynb  search.html  searchindex.js  setup.cfg  test.ipynb
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: edgedetection.doctree  faceslicing.doctree  texturedetection.doctree  workflow.doctree
.doctrees/information/: overview.doctree
.doctrees/segmentationtools/: modules.doctree  segmentationtools.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/examples/: faceslicing.ipynb.txt  texturedetection.ipynb.txt  workflow.ipynb.txt
docs/source/: conf.py  index.rst
docs/source/examples/: context.py  edgedetection.ipynb  faceslicing.ipynb  texturedetection.ipynb  workflow.ipynb
docs/source/information/: overview.md
docs/source/segmentationtools/: modules.rst  segmentationtools.rst
examples/: edgedetection.html  faceslicing.html  texturedetection.html  workflow.html
information/: overview.html
segmentationtools/: __init__.py  modules.html  segmentationtools.html
segmentationtools/fseg/: __init__.py  filters.py
