[metadata]
name = segmentationtools
version = 0.1.0
author = Vermandere
description = Tools to segment meshes
long_description = file: README.md
long_description_content_type = text/markdown
url =www.github.be/jellekul/generic-segmentationtools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = <=3.9
install_requires = geomapi
