[metadata]
name = segmentationtools
version = 0.0.1
author = Vermandere
description = Tools to segment meshes
long_description = file: README.md
long_description_content_type = text/markdown
url =www.github.be/jellekul/segmentationtools
License = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = <=3.9
install_requires = 
    numpy
    geomapi
    open3d
    cv2
    matplotlib
    opencv-python
